--- a/Agenda para una Veterinaria v3/agenda nombre/agenda nombre.vcxproj
+++ b/Agenda para una Veterinaria v3/agenda nombre/agenda nombre.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClInclude Include="resource.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon2.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
