--- a/Agenda para una Veterinaria v3/agenda nombre/agenda nombre.vcxproj.filters
+++ b/Agenda para una Veterinaria v3/agenda nombre/agenda nombre.vcxproj.filters
@@ -29,4 +29,9 @@
       <Filter>Archivos de recursos</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon2.ico">
+      <Filter>Archivos de recursos</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
